// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EcRadioBtn :props :disabled - should render the radio button with a disabled attribute and checked 1`] = `
<div
  class="ec-radio-btn"
  data-test="ec-radio-btn ec-radio-btn-0"
>
  <input
    aria-describedby=""
    class="ec-radio-btn__input"
    data-test="ec-radio-btn__input ec-radio-btn__input-0"
    disabled=""
    id="ec-radio-btn-1"
    type="radio"
    value="y"
  />
  <div
    class="ec-radio-btn__wrapper"
  >
    <div
      class="ec-radio-btn__radio-icon-wrapper ec-radio-btn__radio-icon-wrapper--disabled ec-radio-btn__radio-icon-wrapper--checked-and-disabled"
    >
      <div
        class="ec-radio-btn__radio-icon-wrapper-inner"
      >
        <svg
          class="ec-icon ec-radio-btn__radio-icon ec-radio-btn__radio-icon--checked-and-disabled"
          height="20"
          width="20"
        >
          <use
            xlink:href="#ec-rounded-notification"
          />
        </svg>
      </div>
    </div>
    <div
      class="ec-radio-btn__radio-text-wrapper"
      data-test="ec-radio-btn__radio-text-wrapper"
    >
      <label
        class="ec-radio-btn__radio-label ec-radio-btn__radio-label--disabled"
        data-test="ec-radio-btn__radio-label ec-radio-btn__radio-label-0"
        for="ec-radio-btn-1"
      >
        Yes
      </label>
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`EcRadioBtn :props :error-message - should render the radio button with an error message 1`] = `
<div
  class="ec-radio-btn__error-text"
  data-test="ec-radio-btn__error-text"
  id="ec-radio-btn-1"
>
  
  Test error message prop
  
</div>
`;

exports[`EcRadioBtn :props :isGroupInline - should render the radio buttons on a single line 1`] = `
<div
  class="ec-radio-btn__group ec-radio-btn__group--is-single-line"
  data-test="ec-radio-btn__group"
>
  
  
</div>
`;

exports[`EcRadioBtn :props :isTextInline - should render the radio buttons text (label and description) on a single line 1`] = `
<div
  class="ec-radio-btn__radio-text-wrapper ec-radio-btn__radio-text-wrapper--is-single-line"
  data-test="ec-radio-btn__radio-text-wrapper"
>
  <label
    class="ec-radio-btn__radio-label"
    data-test="ec-radio-btn__radio-label ec-radio-btn__radio-label-0"
    for="ec-radio-btn-1"
    title="One option"
  >
    One option
  </label>
  <!--v-if-->
</div>
`;

exports[`EcRadioBtn :props :label - should render the radio button with a label 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="ec-radio-btn__label"
    data-test="ec-radio-btn__label"
  >
    Test label prop
  </div>
  <div
    class="ec-radio-btn__group"
    data-test="ec-radio-btn__group"
  >
    
    
  </div>
  <!--v-if-->
  
</div>
`;
